Closed
Bug 1660089
Opened 5 years ago
Closed 5 years ago
slick slider on https://sm.rakuten.co.jp/ doesn't animate smoothly
Categories
(Core :: CSS Transitions and Animations, defect, P3)
Core
CSS Transitions and Animations
Tracking
()
VERIFIED
FIXED
82 Branch
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | disabled |
firefox82 | --- | verified |
People
(Reporter: arai, Assigned: hiro)
References
(Regressed 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(4 files)
Steps to reproduce:
- Run Nightly 81.0a1 (2020-08-19) (64-bit) with clean profile on macOS
- open https://sm.rakuten.co.jp/
- Click ">" button over slick slider in the main area ("アイス特集", "まとめ買い" etc),
or just wait for 10 seconds until it moves periodically
Actual result:
The slider shows the first and last frame when animating from right to left
Expected result:
The slider moves smoothly from right to left
Regression Range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5786eef0515a77d3fe7656c5bb1a7a5def4e0ab9&tochange=d67ac396d0f9d67c092672fcac1998edbbd07aed
Assignee | ||
Comment 1•5 years ago
|
||
Thank you for filing this bug! This is indeed a bug in partial pre-render. Looks like it's a quite common case, should be easily create a reduced test case.
Reporter | ||
Comment 2•5 years ago
|
||
here's standalone simplified testcase
Assignee | ||
Comment 3•5 years ago
|
||
Thank you arai san! I didn't expect you do it! Thank you! Good morning, btw. :)
Updated•5 years ago
|
Severity: -- → S3
Component: Layout → CSS Transitions and Animations
Priority: -- → P3
Updated•5 years ago
|
status-firefox79:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Assignee | ||
Comment 4•5 years ago
|
||
We need to use the nearest overflow:hidden scrollable frame as the clip frame in this case.
Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
Assignee | ||
Comment 5•5 years ago
|
||
Pushed by hikezoe.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/20d40fcc3f75
Use the nearest scrollable frame as the clip frame if the scrollable frame is overflow:hidden. r=botond
Comment 7•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•