Bug 1660089 - Use the nearest scrollable frame as the clip frame if the scrollable frame is overflow:hidden. r=botond

Without this change, the transition in the reftest in this commit has never
been composited because it's misrecognized as __jank__.
(Note that a tricky part to understand the jank is that we expand the pre-render
region based on the transformed frame size [1], in this case it's 400px width,
so that the expanded area will be smaller than the size based on 800px.)

[1] https://searchfox.org/mozilla-central/rev/73a14f1b367948faa571ed2fe5d7eb29460787c1/layout/base/nsLayoutUtils.cpp#10043,10045

Differential Revision: https://phabricator.services.mozilla.com/D88199